--- a/src/App.css
+++ b/src/App.css
@@ -2,28 +2,35 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
 .nave-label{
   color: #fff;
+}
+.main-container {
+  position: relative;
+  overflow: initial;
+  background-color: #ececec;
+}
+.main-wrapper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 15px;
+  padding: 10px;
+  background-color: #fff;
+}
+.ant-row label {
+  font-size: 12px;
+  line-height: 28px;
+  float: left;
+}
+.main-wrapper .ant-row .item-warp {
+   display: inline-block;
+   margin-left: 30px;
+   float: left;
+ }
+.main-wrapper .ant-row >:first-child {
+  display: inline-block;
+  float: left;
 }
