--- a/src/App.css
+++ b/src/App.css
@@ -30,8 +30,16 @@
   border-radius: 4px;
   overflow-y: auto;
 }
-.ant-row label {
-  font-size: 12px;
+.filter-header {
+  margin: 5px 5px;
+  padding: 15px 5px 15px;
+  border-radius: 4px;
+  background-color: antiquewhite;
+}
+
+.filter-header label {
+  font-weight: bold;
+  font-size: 16px;
   line-height: 28px;
   float: left;
 }
