--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,9 @@
   display: inline-block;
   float: left;
 }
+.main-wrapper .table-style {
+  padding: 15px 5px
+}
 .tree-ul {
   padding: 20px 20px 0;
   display: block;
@@ -104,14 +107,14 @@
   margin-left: 21px;
 }
 
-.tree-ul li > .add-icon{
+.add-icon{
   float: left;
   margin-left: 15px;
   font-size: 14px;
   color: #0c06f3;
   cursor: pointer;
 }
-.tree-ul li > .delete-icon{
+.delete-icon{
   float: left;
   margin-left: 15px;
   font-size: 14px;
