--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,7 @@
 .App {
   text-align: center;
 }
-.center-point {
-  position:absolute;
-  top:0;
-  left: 0;
-  right:0;
-  bottom:0;
-  margin:auto;
-}
+
 .nave-label{
   color: #fff;
 }
@@ -43,29 +36,31 @@
   line-height: 28px;
   float: left;
 }
-.main-wrapper .ant-row .search-style{
+.filter-header .search-style{
   margin-left: 15px;
   width: 150px
 }
-
-.main-wrapper .ant-row .item-warp {
+.filter-header .item-warp {
    display: inline-block;
    margin-left: 30px;
    float: left;
  }
-
-.main-wrapper .ant-row .item-warp .select-style{
+.filter-header .item-warp .select-style{
   margin-left: 15px;
   width: 100px
 }
-
-.main-wrapper .ant-row >:first-child {
+.filter-header >:first-child {
   display: inline-block;
   float: left;
 }
-.main-wrapper .table-style {
+
+.content-wrapper {
+  position: relative;
+}
+.content-wrapper .table-style {
   padding: 15px 5px
 }
+
 .tree-ul {
   padding: 20px 20px 0;
   display: block;
@@ -73,7 +68,6 @@
 .tree-ul li {
   padding: 10px 6px 0;
 }
-
 .tree-ul li .un-togglable::before,
 .tree-ul .togglable-down::before,
 .tree-ul .togglable-up::before {
@@ -84,7 +78,6 @@
 .tree-ul li .un-togglable::before {
   content: ".";
 }
-
 .tree-ul .togglable-down::before {
   content: "▼";
 }
@@ -102,7 +95,6 @@
   color: blue;
   font-size: 14px;
 }
-
 .tree-ul li > .null-label {
   margin-left: 21px;
 }
@@ -121,6 +113,7 @@
   color: red;
   cursor: pointer;
 }
+
 .clearfixed:after{
   display: block;
   content: '.';
