--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
 .App {
   text-align: center;
 }
+.margin-left-30 {
+  margin-left: 30px;
+}
+.margin-right-30 {
+  margin-right: 30px;
+}
 
 .nave-label{
   color: #fff;
@@ -41,7 +47,6 @@
 }
 .filter-header .item-warp {
    display: inline-block;
-   margin-left: 30px;
    float: left;
  }
 .filter-header .item-warp .select-style{
@@ -194,6 +199,14 @@
 .row-form textarea {
   height: 70px;
   width: 400px;
+}
+.row-form img {
+  width: 240px;
+  height: 200px;
+  margin-top: 10px;
+}
+.img-height {
+  height: 220px;
 }
 .live-player {
   height: 460px;
