--- a/src/App.css
+++ b/src/App.css
@@ -212,8 +212,8 @@
 .textarea-height {
   height: 80px
 }
-.img-height {
-  height: 220px;
+.certificate-height {
+  height: 280px;
 }
 .live-player {
   height: 460px;
