--- a/src/App.css
+++ b/src/App.css
@@ -23,21 +23,18 @@
   bottom: 0;
   left: 0;
   right: 0;
-  margin: 15px 1px 10px 15px;
+  margin: 0 1px 0 15px;
   padding: 10px;
   background-color: #fff;
-  border-radius: 4px;
   overflow-y: auto;
 }
 .filter-header {
   padding: 15px 5px 15px;
-  border-radius: 4px;
   background-color: antiquewhite;
 }
 
 .filter-header label {
-  font-weight: bold;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 28px;
   float: left;
 }
@@ -60,7 +57,6 @@
 
 .content-wrapper {
   position: relative;
-  padding: 5px 5px;
 }
 .content-wrapper .table-style {
   padding: 15px 0
