--- a/src/App.css
+++ b/src/App.css
@@ -168,6 +168,7 @@
 }
 .row-form > * {
   float: left;
+  line-height: 30px;
 }
 .row-form .offset-1-2 > * ,
 .row-form .offset-1-3 > * ,
@@ -225,6 +226,7 @@
   height: 80px;
   width: 400px;
   font-size: 14px;
+  margin-top: 10px;
 }
 .row-form img {
   width: 240px;
@@ -236,7 +238,8 @@
   color: blue;
 }
 .row-form .remove-tree{
-  margin-left: 50px;
+  line-height: 30px;
+  margin-left: 30px;
   font-size: 18px;
   color: red;
 }
